fix scrolling on mobile web version

--- a/web/styles.css
+++ b/web/styles.css
@@ -104,7 +104,7 @@ button:hover {
     padding: 6px;
     border-radius: 8px;
     width: 100%;
-    max-width: min(420px, 55vh);
+    max-width: min(420px, 45vh);
     aspect-ratio: 1 / 1;
     margin: 0 auto;
     box-sizing: border-box;
